tests/type-check/bad/function-tuple-not-function.arr
fun f(t :: { String; Boolean }):
   t
end

f(f)
